--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ a:hover {
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 5rem;
+    font-weight:bold;
     color: #BA704F;
    
 }
@@ -187,7 +188,7 @@ form {
 
 form input {
     height: 3rem;
-    width: 45%;
+    width: 55%;
     font-weight: bolder;
 }
 
